Database populated, search feature added. Minor changes made
