# src/routes.py
@@ -5,6 +5,7 @@ from src.resources.ingredients import IngredientApi
 from src.resources.iptracker import TrackerApi
 from src.resources.recipe import RecipeApi
 from src.resources.index import Index
+from src.resources.search import SearchApi
 from src.resources.users import UsersApi
 
 
@@ -17,3 +18,4 @@ api.add_resource(LoginApi, '/login', strict_slashes=False)
 api.add_resource(FeedbackApi, '/feedback', '/feedback/<_id>', strict_slashes=False)
 api.add_resource(UsersApi, '/users', '/users/<uuid>', strict_slashes=False)
 api.add_resource(TrackerApi, '/tracker', strict_slashes=False)
+api.add_resource(SearchApi, '/search', strict_slashes=False)
